kuber-homeworks-1.5/nginx-multitool/netology-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-frontend-deployment
  namespace: netology
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netology-nginx
  template:
    metadata:
      labels:
        app: netology-nginx
    spec:
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: nginx:1.25.1-alpine3.17
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-backend-deployment
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-multitool
  template:
    metadata:
      labels:
        app: netology-multitool
    spec:
      containers:
      - name: network-multitool
        imagePullPolicy: IfNotPresent
        image: wbitt/network-multitool
        ports:
        # - containerPort: 8080
        #   name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
