kuber-homeworks-1.5/nginx-multitool/netology-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-frontend-service
  namespace: netology
spec:
  ports:
    - port: 9001
      targetPort: 80
      protocol: TCP
      name: nginx-http
  type: ClusterIP
  selector:
    app: netology-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: netology-backend-service
  namespace: netology
spec:
  ports:
    - port: 9002
      targetPort: 8080
      protocol: TCP
      name: multitool-http
    - port: 9443
      targetPort: 11443
      protocol: TCP
      name: multitool-https
  type: ClusterIP
  selector:
    app: netology-multitool
